--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "Server=DESKTOP-OR8TRAU\\SQLEXPRESS;Database=HotelListing;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
