Account configuration, JWT security default authentication

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "sqlConnection": "Server=DESKTOP-OR8TRAU\\SQLEXPRESS;Database=HotelListing;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Jwt": {
+    "Issuer": "HotelListingAPI",
+    "lifetime": 15
+  },
   "AllowedHosts": "*"
 }
