--- a/HotelListing/HotelListing.csproj
+++ b/HotelListing/HotelListing.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.1-dev-00250" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="X.PagedList.PagedListExt" Version="0.8.3" />
   </ItemGroup>
 
 </Project>
