global exception handler, versioning, ratelimiting

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=DESKTOP-OR8TRAU\\SQLEXPRESS;Database=HotelListing;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "sqlConnection": "Server=MYPC\\SQLEXPRESS;Database=HotelListing;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
     "Issuer": "HotelListingAPI",
